Bug 1824522 - Include ContentChild.h in FuzzingFunctions.cpp. a=bustage-fix CLOSED TREE

Differential Revision: https://phabricator.services.mozilla.com/D173623